Moved from default package to an explicit package name

--- a/build.gradle
+++ b/build.gradle
@@ -33,3 +33,10 @@ dependencies {
     // 'test.useTestNG()' to your build script.
     testCompile 'junit:junit:4.12'
 }
+
+jar {
+    manifest {
+        attributes('Implementation-Title': 'NeuralNetwork',
+                   'Implementation-Version': '0.1')
+    }
+}
