--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>XorSolver</name>
-	<comment>Project XorSolver created by Buildship.</comment>
+	<name>NeuralNetwork</name>
+	<comment>Project NeuralNetwork created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
